kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bulletin-ingress
  namespace: bulletinboard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      # Frontend
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-service
            port:
              number: 5173
      # API Gateway
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: apigateway-service
            port:
              number: 8080
      # Keycloak
      - path: /auth/
        pathType: Prefix
        backend:
          service:
            name: keycloak-service
            port:
              number: 8080
      # MinIO API
      - path: /minio/
        pathType: Prefix
        backend:
          service:
            name: minio-service
            port:
              number: 9000
      # MinIO Console
      - path: /minio/console/
        pathType: Prefix
        backend:
          service:
            name: minio-service
            port:
              number: 9002
